chore:se creo la carpeta de estilos

--- a/3- Desarrollo/maketacion MPA/Administrador.html
+++ b/3- Desarrollo/maketacion MPA/Administrador.html
@@ -11,18 +11,32 @@
 	<section>
 		<head></head>
 		<nav>
-			<button></button>
-			<label class="pintar"></label>
-			<label id="0"></label>
-			<label id="1"></label>
-			<label id="2"></label>
-			<label id="3"></label>
-			<label id="4"></label>
-			<label id="5"></label>
-			<checkbox class= "pintarcheck"></checkbox>
-			<checkbox id = "6"></checkbox>
-			<checkbox id = "7"></checkbox>
-			<checkbox id = "8"></checkbox>
+		<form >
+				<button></button>
+				<label class="pintar">Tipo de producto</label>
+				<input type='text' name="Tipo deproducto" required>
+				<label id="0">Cantidad</label>
+					<input type="number" name="num1" >
+				<label id="1">Fecha de Ingreso</label>
+					<input type="number" name="num1" >
+				<label id="2">Dia</label>
+					<input type="number" name="num1" >
+				<label id="3">Año</label>
+					<input type="number" name="num1" >
+				<label id="4">Modelo</label>
+					<input type="number" name="num1" >
+				<label id="5">precio unitario</label>
+					<input type="number" name="num1" >
+				<label id="6">proveedor</label>
+					<input type="number" name="num1" >
+				<label id="7">Marca</label>
+				<input type="number" name="num1" >
+				<checkbox id="8">Observacione</checkbox>
+					<input type="number" name="num1" >
+				<checkbox id = "9">Mes</checkbox>
+				<checkbox id = "10">Categoria</checkbox>
+				
+		</form>
 
 
 		</nav>
