--- a/3- Desarrollo/maketacion MPA/Producto.html
+++ b/3- Desarrollo/maketacion MPA/Producto.html
@@ -1,36 +1,80 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="text/css" href="css/gestionProducto.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Administrador</title>
 </head>
 <body>
 	<header>
-		<img src="">
+		
+		<img src="img/Logo.png">
 
 	</header>
+	
 	<section>
-		<head></head>
-		<nav>
-			<button></button>
-			<label class="pintar">Tipo de producto</label>
-			<label id="0">Cantidad</label>
-			<label id="1">Fecha de Ingreso</label>
-			<label id="2">Dia</label>
-			<label id="3">Año</label>
-			<label id="4">Modelo</label>
-			<label id="5">precio unitario</label>
-			<label id="6">proveedor</label>
-			<label id="7">Marca</label>
-			<checkbox id="8">Observacione</checkbox>
+    <nav>
 
-			<checkbox id = "9">Mes</checkbox>
-			<checkbox id = "10">Categoria</checkbox>
-			<checkbox id = "11"></checkbox>
+    
+    <form class="needs-validation" novalidate>
+      <div class="boton1">
+      <input class="boton1" type="submit" name="Boton" value="AGREGAR PRODUCTO">
+      <div class="boton1">
+    <div class="form-row">
+   
+    <div class="col-md-4 mb-3">
+      <label for="validationTooltip02">NOMBRE PRODUCTO</label>
+      <input type="text" class="form-control" id="validationTooltip02" placeholder="nombre" value="nombre producto" required>
+    </div>
+    <div class="col-md-4 mb-3">
+      <label for="validationTooltip02">DESCRIPCION</label>
+      <input type="text" class="form-control" id="validationTooltip02" placeholder="descripcion" value="descripcion" required>
+    </div>
+      </div>
+    </div>
+  </div>
+  <div class="form-row">
+    <div class="col-md-3 mb-3">
+      <label for="validationTooltip03">VALOR UNITARIO</label>
+      <input type="text" class="form-control" id="validationTooltip03" placeholder="valor unitario" required>
+    </div>
+    <div class="col-md-3 mb-3">
+      <label for="validationTooltip04">IMAGEN</label>
+      <input type="text" class="form-control" id="validationTooltip04" placeholder="imagen" required>
+    </div>
+    <div class="col-md-3 mb-3">
+      <label for="validationTooltip05">MARCA</label>
+      <input type="text" class="form-control" id="validationTooltip05" placeholder="marca" required>
+    </div>
+  </div>
+  <div class="col-md-3 mb-3">
+      <label for="validationTooltip05">CATEGORIA</label>
+      <input type="text" class="form-control" id="validationTooltip05" placeholder="categoria" required>
+    </div>
+  </div>
+  <button class="boton1" >GUARDAR</button>
+</form>
+</nav>
+<table class="pintartabla">
+  <tr >
+    <th>Nombre Producto</th>
+    <th>Descripcion</th>
+    <th>Valor unitario</th>
+    <th>Imagen</th>
+    <th>Marca</th>
+    <th>Categoria</th>
 
+  </tr>
+  <tr>
+    <td>g</td>
+    <td>g</td>
+    <td>g</td>
+    <td>g</td>
+    <td>g </td>
 
-		</nav>
+  </tr>
 
-		
+</table>
 	</section>
 </body>
 </html>
