dhore:se trabajo en los makops

--- a/3- Desarrollo/maketacionMPA/Administrador.html
+++ b/3- Desarrollo/maketacionMPA/Administrador.html
@@ -10,7 +10,7 @@
 	</div>
 </head>
 <body>
-	<section>
+	<section class="sec">
 		<article class="img" >
 			<img  src="img/user.png">
 			<p class="P">AÑADIR CLIENTE</p>
