--- a/3- Desarrollo/maketacionMPA/inicio_secion.html
+++ b/3- Desarrollo/maketacionMPA/inicio_secion.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="css/registrousuario.css">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/ingresar.css">
+	
 	<title>Inicio</title>
 </head>
 <body>
@@ -10,41 +10,61 @@
 
 	<header>
 		
-		<img src="img/Logo.png">
-   <hr align="left" noshade="noshade" size="100" width="80%" /> 
+		<img class="img" src="img/Logo.png">
+   
 
 	</header>
 	
-	<section>
+	<section class="nav">
+		<hr class="hr3" /><br>
 
-    <nav>
+ <nav >
+ 	<h1>Para continuar inicie secion</h1>
+ 	<div>
+  <button class="boton2" type="submit" class="btn btn-primary">INGRESAR CON GOOGLE</button>
+</div><br><br><br><br>
+    <div>
+ 	 <hr class="hr1" /> o <hr class="hr2" /><br><br><br><br><br><br>
+ 	</div>
     <form>
   <div class="form-group">
+  	<div class="col-md-4 mb-5">
     <label for="exampleInputEmail1">Nombre usuario</label>
     <input type="Nombre usuario" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Nombre usuario">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
+    <small id="emailHelp" class="form-text text-muted"></small>
+  </div><br>
   <div class="form-group">
+  	<div class="col-md-4 mb-5">
     <label for="exampleInputEmail1">Email address</label>
     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
+    <small id="emailHelp" class="form-text text-muted"></small>
+  </div><br>
   <div class="form-group">
+  	<div class="col-md-4 mb-5">
     <label for="exampleInputPassword1">Password</label>
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
-  </div>
+  </div><br></div><br>
   <div class="form-group form-check">
     <input type="checkbox" class="form-check-input" id="exampleCheck1">
-    <label class="form-check-label" for="exampleCheck1">Check me out</label>
-  </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+    <label class="form-check-label" for="exampleCheck1">RECORDAR CONTRACEÑA</label>
+    <button class="boton1" type="submit" class="btn btn-primary">INGRESAR </button>
+  </div><br>
 
+  
+</form>
     
-</form>
-</nav>
-
+</nav><br><br>
+<h1>¿Se te olvido la contraceña?</h1>
+<hr class="hr4" /><br>
+<div>
+<button class="boton2" type="submit" class="btn btn-primary">SUBSCRIBETE CON NOSOTROS </button>
+</div><br><br><br><br><br><br>
+<h2>
+MPA 2019
+</h2>
 	</section>
+
+
 </body>
-<footer></footer>
+
 </html>
