chore :se documentaron unas pruebas

--- a/3- Desarrollo/maketacionMPA/Administrador.html
+++ b/3- Desarrollo/maketacionMPA/Administrador.html
@@ -7,6 +7,7 @@
 	<img class="logo" src="img/Logo.png">
 	<div class="div">
 	<h1 >ADMINISTRADOR</h1>
+	 <meta charset="utf-8"> 
 	</div>
 </head>
 <body>
