--- a/3- Desarrollo/maketacionMPA/registrousuario.html
+++ b/3- Desarrollo/maketacionMPA/registrousuario.html
@@ -4,18 +4,18 @@
 	<link rel="stylesheet" type="text/css" href="css/registrousuario.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://maps.google.com/maps/api/js?sensor=false" type="text/javascript"></script>
-
+  <meta charset="utf-8"> 
 	<title>Registro</title>
 </head>
 <body>
 
 
 	<header>
-		
-		<img src="img/Logo.png">
-   
+		<div class="img">
+		<img  src="img/Logo.png" width=" 40%">
+   </div>
 
-	</header>
+	</header><br><br><br>
 	
 	<section>
 
